--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -12,6 +12,8 @@ KEY POSITIONS
               ╰────────╯ ╰────────╯
 */
 
+#include <dt-bindings/zmk/keys.h>
+
 #define COMBO(NAME, BINDINGS, KEYPOS, LAYERS, TERM) \
         combo_##NAME { \
             timeout-ms = <TERM>; \
