--- a/config/combos-42.dtsi
+++ b/config/combos-42.dtsi
@@ -38,7 +38,7 @@ KEY POSITIONS
         combo_capslock {
             timeout-ms = <50>;
             key-positions = <13 16>;
-            bindings = <&caps_word>;
+            bindings = <&kp CAPS>;
        };
     };
 };
