--- a/.github/workflows/build-sweep.yml
+++ b/.github/workflows/build-sweep.yml
@@ -10,6 +10,7 @@ on:
   pull_request:
     branches: [main]
   workflow_dispatch:
+
 name: Build Sweep
 jobs:
   build:
@@ -42,29 +43,29 @@ jobs:
         run: west update
       - name: West Zephyr export
         run: west zephyr-export
-      - name: West Build (Corne Left)
-        run: west build -s zmk/app -b nice_nano_v2 -- -DSHIELD=corne_left -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
-      - name: Corne DTS File
+      - name: West Build (Ferris Left)
+        run: west build -s zmk/app -b nice_nano_v2 -- -DSHIELD=ferris_left -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+      - name: Ferris DTS File
         if: ${{ always() }}
         run: cat -n build/zephyr/nice_nano_v2.dts.pre.tmp
-      - name: Corne Left Kconfig file
+      - name: Ferris Left Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 corne_left_nice_nano_v2.uf2
-      - name: Archive (Corne Left)
+        run: cp build/zephyr/zmk.uf2 ferris_left_nice_nano_v2.uf2
+      - name: Archive (Ferris Left)
         uses: actions/upload-artifact@v2
         with:
           name: firmware
-          path: corne_left_nice_nano_v2.uf2
-      - name: West Build (Corne Right)
-        run: west build --pristine -s zmk/app -b nice_nano_v2 -- -DSHIELD=corne_right -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+          path: ferris_left_nice_nano_v2.uf2
+      - name: West Build (Ferris Right)
+        run: west build --pristine -s zmk/app -b nice_nano_v2 -- -DSHIELD=ferris_right -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
 
-      - name: Corne Right Kconfig file
+      - name: Ferris Right Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 corne_right_nice_nano_v2.uf2
-      - name: Archive (Corne Right)
+        run: cp build/zephyr/zmk.uf2 ferris_right_nice_nano_v2.uf2
+      - name: Archive (Ferris Right)
         uses: actions/upload-artifact@v2
         with:
           name: firmware
-          path: corne_right_nice_nano_v2.uf2
+          path: ferris_right_nice_nano_v2.uf2
