--- a/config/boards/shields/ferris_sweep_v2/ferris_sweep_v2.dtsi
+++ b/config/boards/shields/ferris_sweep_v2/ferris_sweep_v2.dtsi
@@ -27,8 +27,7 @@
 	kscan0: kscan {
 		compatible = "zmk,kscan-gpio-direct";
 		label = "KSCAN";
-		input-gpios
-		= <&pro_micro_d  7 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
+		input-gpios = <&pro_micro_d  7 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
 		, <&pro_micro_a  0 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
 		, <&pro_micro_a  1 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
 		, <&pro_micro_a  2 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
