--- a/.github/workflows/build-cradio.yml
+++ b/.github/workflows/build-cradio.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Archive (Cradio Left)
         uses: actions/upload-artifact@v2
         with:
-          name: firmware
+          name: firmware_cradio
           path: cradio_left_nice_nano_v2.uf2
       - name: West Build (Cradio Right)
         run: west build --pristine -s zmk/app -b nice_nano_v2 -- -DSHIELD=cradio_right -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
@@ -64,5 +64,5 @@ jobs:
       - name: Archive (Cradio Right)
         uses: actions/upload-artifact@v2
         with:
-          name: firmware
+          name: firmware_cradio
           path: cradio_right_nice_nano_v2.uf2
