--- a/.github/workflows/build-sweep.yml
+++ b/.github/workflows/build-sweep.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Archive (Ferris Left)
         uses: actions/upload-artifact@v2
         with:
-          name: firmware
+          name: firmware_sweep
           path: ferris_left_nice_nano_v2.uf2
       - name: West Build (Ferris Right)
         run: west build --pristine -s zmk/app -b nice_nano_v2 -- -DSHIELD=ferris_sweep_v2_right -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
@@ -65,5 +65,5 @@ jobs:
       - name: Archive (Ferris Right)
         uses: actions/upload-artifact@v2
         with:
-          name: firmware
+          name: firmware_sweep
           path: ferris_right_nice_nano_v2.uf2
