--- a/.github/workflows/build-hypergolic.yml
+++ b/.github/workflows/build-hypergolic.yml
@@ -3,12 +3,13 @@ on:
   push:
     branches: [main]
     paths:
-      - 'config/cradio**'
+      - 'config/hypergolic**'
+      - 'config/boards/shields/hypergolic/**'
   pull_request:
     branches: [main]
   workflow_dispatch:
 
-name: Build Cradio
+name: Build hypergolic
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -40,29 +41,29 @@ jobs:
         run: west update
       - name: West Zephyr export
         run: west zephyr-export
-      - name: West Build (Cradio Left)
-        run: west build -s zmk/app -b nice_nano_v2 -- -DSHIELD=cradio_left -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
-      - name: Cradio DTS File
+      - name: West Build (hypergolic Left)
+        run: west build -s zmk/app -b nice_nano_v2 -- -DSHIELD=hypergolic_left -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+      - name: hypergolic DTS File
         if: ${{ always() }}
         run: cat -n build/zephyr/nice_nano_v2.dts.pre.tmp
-      - name: Cradio Left Kconfig file
+      - name: hypergolic Left Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 cradio_left_nice_nano_v2.uf2
-      - name: Archive (Cradio Left)
+        run: cp build/zephyr/zmk.uf2 hypergolic_left_nice_nano_v2.uf2
+      - name: Archive (hypergolic Left)
         uses: actions/upload-artifact@v2
         with:
-          name: firmware_cradio
-          path: cradio_left_nice_nano_v2.uf2
-      - name: West Build (Cradio Right)
-        run: west build --pristine -s zmk/app -b nice_nano_v2 -- -DSHIELD=cradio_right -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+          name: firmware_hypergolic
+          path: hypergolic_left_nice_nano_v2.uf2
+      - name: West Build (hypergolic Right)
+        run: west build --pristine -s zmk/app -b nice_nano_v2 -- -DSHIELD=hypergolic_right -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
 
-      - name: Cradio Right Kconfig file
+      - name: hypergolic Right Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 cradio_right_nice_nano_v2.uf2
-      - name: Archive (Cradio Right)
+        run: cp build/zephyr/zmk.uf2 hypergolic_right_nice_nano_v2.uf2
+      - name: Archive (hypergolic Right)
         uses: actions/upload-artifact@v2
         with:
-          name: firmware_cradio
-          path: cradio_right_nice_nano_v2.uf2
+          name: firmware_hypergolic
+          path: hypergolic_right_nice_nano_v2.uf2
