--- a/.github/workflows/build-hypergolic.yml
+++ b/.github/workflows/build-hypergolic.yml
@@ -9,7 +9,7 @@ on:
     branches: [main]
   workflow_dispatch:
 
-name: Build hypergolic
+name: Build Hypergolic
 jobs:
   build:
     runs-on: ubuntu-latest
