--- a/build.yaml
+++ b/build.yaml
@@ -22,8 +22,8 @@ include:
   - board: nice_nano_v2
     shield: hypergolic_right
   - board: nice_nano_v2
-    shield: sweep_left
+    shield: sweep_v2_left
   - board: nice_nano_v2
-    shield: sweep_right
+    shield: sweep_v2_right
   - board: nice_nano_v2
     shield: zaphod
