update build yaml for zaphod

--- a/build.yaml
+++ b/build.yaml
@@ -25,5 +25,4 @@ include:
     shield: sweep_v2_left
   - board: nice_nano_v2
     shield: sweep_v2_right
-  - board: nice_nano_v2
-    shield: zaphod
+  - board: zaphod
